yoshimi 1.5.M

2019-4-18 Will
* Made 'A' frequency entry box wider.
* Master VU now fullly cleared at startup.
* Removed fake peak indication from disabled parts.

2019-4-15 Will
* Added first time start info window.
* Further small CLI refinements.

2019-4-15 Will
* Implemented CLI MIDI controllers.
  This had been forgotten :(

2019-4-14 Will
* CLI part common control text copied to sections.
  Being separate was confusing in some situations
  and not particularly helpful generally.

2019-4-11 Will
* Fix 'A' note range as 329 to 660 Hz.
* Added note info to /doc

2019-4-9 Will
* BugFix: CLI not setting effect numbers.
* Added named effects controls replacing some numbers.
* CLI now shows a '?' for changed effect presets.
* Some doc updates.

2019-4-8 Will
* Removed /Misc/FileListItem.h
  It was never called, referenced or included.
* A few minor cleanups.

2019-4-6 Will
* Disable GUI Analog Phaser controls when not set.
* Revised Gui Layout to make this more obvious.
* Further adustments - Phase disabled for Analog.
* Re-ordered controls.
* L/R also disabled for Analog.

2019-4-3 Will
* Converted Bank root control to MSB, LSB, OFF.
* Undated docs.

2019-4-1 Will
* Added more informative tooltips.

2019-3-27 Will
* Completed GUi updates for effect controls.
* Implemented master mono/stero switch.
* Resets and state/patch loads clear mono/stero switch.

2019-3-26 Will
* BugFix: MIDI-learn now learn correct effect numbers.
  GUI still not updated correctly yet.

2019-3-23 Will
* Corrected code indentation and missing bracket
  in UI/MiscGui.cpp

2019-3-22 will
* Further adjustments to suppress GCC7 warnings.
  Some global enums changed to const unsigned char.
  CmdInterface/helplist() changed to char.
* Added more warning/error traps to CMakeLists.
* Removed some switch case dropthroughs.
* Final GCC7 warnings suppressed?

2019-3-21 Will
* Bugfix: Insert effect part list out of step.
* Sorted out potential GCC7 build warnings.

2019-3-20 Will