@@ -1,8 +1,12 @@
 yoshimi 1.5.M
 
+2019-4-19 Will
+* Implemented separate L/R part VU metering.
+* Removed some direct calls from VU GUI to synth.
+
 2019-4-18 Will
 * Made 'A' frequency entry box wider.
-* Master VU now fullly cleared at startup.
+* Master VU now fully cleared at startup.
 * Removed fake peak indication from disabled parts.
 
 2019-4-15 Will
